# django

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  manage.py  pyproject.toml
DjangoProject/: settings.py
core/: manage.py
core/DjangoProject/: asgi.py  settings.py  urls.py  wsgi.py
core/DjangoProject/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
core/DjangoProject/settings/templates/: settings.dev.py
core/core/utils/: collections.py  misc.py  settings.py
local/: setting.dev.py  settings.dev.py
