[project]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaoyulyu999",email = "info@bloomora.net"}
]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.12, <4.0"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-split-settings (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=25.12.0,<26.0.0)"
]

[tool.isort]
multi_line_output = 5
line_length = 119

#[tool.yapf]
#based_on_style = "google"
#align_closing_bracket_with_visual_indent = true
#coalesce_brackets = true
#column_limit = 119
#dedent_closing_brackets = true
[tool.black]
line-length = 119       # match your isort line length
target-version = ["py310", "py311", "py312"]  # Python versions to support
include = '\.pyi?$'     # include Python files
exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
)/
'''
